# ChangeLog for sys-kernel/cdfs
# Copyright 2004 Christian Gmeiner; Distributed under the GPL
# $Header: /home/xubuntu/berlios_backup/github/tmp-cvs/gentoo-deutsch/Repository/ebuilds/sys-kernel/love-sources/ChangeLog,v 1.1 2004/06/19 09:07:53 austriancoder Exp $

*love-sources (19 June 2004)

  19 June 2004; Christian Gmeiner <christian at visual-page dot de>
  Inital ebuilds.