@@ -1,13 +1,15 @@
-MD5 5e32f4f314f87afa6413c2f65b3a1b2e love-sources-2.6.6_rc3-r4.ebuild 1540
-MD5 5e50719887704985a162d30508267b2d love-sources-2.6.6-r5.ebuild 1536
-MD5 73f218048d292ad5043079126328078b love-sources-2.6.6-r4.ebuild 1387
-MD5 3c1449426924698cd69278efc0c68102 love-sources-2.6.7_rc1-r1.ebuild 1518
-MD5 3c1449426924698cd69278efc0c68102 love-sources-2.6.7_rc3-r1.ebuild 1518
-MD5 28735a80c092092f3b866c35b7eedbee love-sources-2.6.7_rc3-r2.ebuild 1647
-MD5 b7fe7da4c21b380d2b83808112ab987a ChangeLog 327
+MD5 16297b2c0d5083b538d418a581cea33c love-sources-2.6.6_rc3-r4.ebuild 1579
+MD5 41cc6eafa74486c4fff265f8cff7c748 love-sources-2.6.6-r5.ebuild 1571
+MD5 b70495ee5aaf817128398641a5753ab4 love-sources-2.6.6-r4.ebuild 1422
+MD5 5690d790d7f98c99c3aa8e61170461a4 love-sources-2.6.7_rc1-r1.ebuild 1651
+MD5 1a9a2aebf0d66cc9d5209f2397ddab67 love-sources-2.6.7_rc3-r1.ebuild 1651
+MD5 e92bd8126ca15e4f23bdbdb2252fd8b8 love-sources-2.6.7_rc3-r2.ebuild 1780
+MD5 90016db972585baf917ba8ca8eeabb54 ChangeLog 467
+MD5 464a0e8debe038f34b55e2d00a2b9ad9 love-sources-2.6.8_rc1-r1.ebuild 1642
 MD5 89fff60c4dbe945422b16307d4e4f1f4 files/digest-love-sources-2.6.6_rc3-r4 257
 MD5 668d09e4ef3eadf7709275cbeae2b949 files/digest-love-sources-2.6.6-r5 186
 MD5 41a64fba7285ed895455cb4b2616d632 files/digest-love-sources-2.6.6-r4 127
 MD5 ff262147eeb1ac98f5a8f9f622e5c7c2 files/digest-love-sources-2.6.7_rc1-r1 257
 MD5 2408dfd247ea549064640a8fa6880f55 files/digest-love-sources-2.6.7_rc3-r1 258
 MD5 4f508ad44da5097369d39142a2a5d7bc files/digest-love-sources-2.6.7_rc3-r2 259
+MD5 71ef8771fc87aeecf6c00b7cdb538c69 files/digest-love-sources-2.6.8_rc1-r1 258
