@@ -1,0 +1,4 @@
+MD5 b96bc0b2c12d029ef01c99a3b7a42cfc patch-2.6.8-rc1.bz2 2662225
+MD5 a74671ea68b0e3c609e8785ed8497c14 linux-2.6.7.tar.bz2 35092228
+MD5 ab2b075dee78707f9b7d4f6cde92a871 2.6.8-rc1-mm1.bz2 1034791
+MD5 dcda5bad4a1f028fb30ea893b7fff7a5 2.6.8-rc1-love1.bz2 771792
